# feishu-to-markdown

./: .gitignore  README.md  feishu2md.py  pyproject.toml
feishu2md/: __init__.py  __main__.py  docx_patcher.py  models.py  numbering.py  pandoc.py  preprocessor.py  scanner.py  stripper.py  writer.py
tests/: conftest.py  test_cli.py  test_docx_patcher.py  test_e2e.py  test_idempotent.py  test_models.py  test_numbering.py  test_package.py  test_pandoc.py  test_preprocessor.py  test_scanner.py  test_stripper.py  test_stubs.py  test_writer.py
tests/fixtures/: basic.md  blockquote.md  chinese_numbering.md  code_blocks.md  empty_headings.md  formatted_headings.md  front_matter.md  h2_start.md  level_jump.md  no_headings.md  setext_headings.md  start_from_h2.md  version_number_titles.md  version_titles.md  with_existing_numbers.md
